--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 agp = "8.3.0-alpha06"
-kotlin = "1.9.0"
+kotlin = "1.9.10"
 core-ktx = "1.10.1"
 compileSdk = "34"
 targetSdk = "34"
@@ -24,7 +24,7 @@ mavericks = "3.0.7"
 threetenabp = "1.3.1"
 javax = "1"
 coroutine-core = "1.7.3"
-androidxComposeCompiler = "1.5.1"
+androidxComposeCompiler = "1.5.3"
 coroutine = "1.7.2"
 room = "2.6.0"
 monitor = "1.6.1"
@@ -88,7 +88,7 @@ androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
-kotlinAndroid = { id = "org.jetbrains.kotlin.android", version = "1.9.20-RC" }
+kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
