#13 feat : task 바텀시트 연결 및 add task 구현

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,10 +29,13 @@ coroutine = "1.7.2"
 room = "2.6.0"
 monitor = "1.6.1"
 junitKtx = "1.1.5"
+window = "1.0.0"
 
 [libraries]
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
 kotlin-gradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+
+androidx-window = { group = "androidx.window", name = "window", version.ref = "window" }
 
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -54,6 +57,7 @@ androidx-datastore-preference-core = { group = "androidx.datastore", name = "dat
 
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 
 moshi = { group = "com.squareup.moshi", name = "moshi", version.ref = "moshi" }
 moshi-kotlin = { group = "com.squareup.moshi", name = "moshi-kotlin", version.ref = "moshi" }
