--- a/feature/time/src/main/AndroidManifest.xml
+++ b/feature/time/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <application>
 
         <activity
-            android:name=".ColorActivity"
+            android:name=".ui.color.ColorActivity"
             android:exported="false"></activity>
 
     </application>
