#22 chore : parcelable 추가 및 measuringactivity 추가

--- a/feature/time/src/main/AndroidManifest.xml
+++ b/feature/time/src/main/AndroidManifest.xml
@@ -5,7 +5,11 @@
 
         <activity
             android:name=".ui.color.ColorActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
+
+        <activity
+            android:name=".ui.measure.MeasuringActivity"
+            android:exported="false" />
 
     </application>
 </manifest>
