--- a/feature/color/src/main/AndroidManifest.xml
+++ b/feature/color/src/main/AndroidManifest.xml
@@ -4,8 +4,9 @@
     <application>
 
         <activity
-            android:name=".ui.measure.MeasuringActivity"
+            android:name="com.titi.feature.color.ui.ColorActivity"
             android:exported="false" />
 
     </application>
+
 </manifest>
