--- a/feature/color/src/main/AndroidManifest.xml
+++ b/feature/color/src/main/AndroidManifest.xml
@@ -5,7 +5,19 @@
 
         <activity
             android:name="com.titi.feature.color.ui.ColorActivity"
-            android:exported="false" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="color"
+                    android:scheme="titi" />
+
+            </intent-filter>
+        </activity>
 
     </application>
 
