--- a/feature/measure/src/main/AndroidManifest.xml
+++ b/feature/measure/src/main/AndroidManifest.xml
@@ -18,6 +18,15 @@
 
             </intent-filter>
         </activity>
+
+        <receiver
+            android:name=".PermissionReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.app.action.SCHEDULE_EXACT_ALARM_PERMISSION_STATE_CHANGED" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
