#28 feat : 재부팅에 따른 알람 다시 설정 로직 구현

--- a/feature/measure/src/main/AndroidManifest.xml
+++ b/feature/measure/src/main/AndroidManifest.xml
@@ -27,6 +27,14 @@
             </intent-filter>
         </receiver>
 
+        <receiver
+            android:name=".BootReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
