--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,40 +1,45 @@
 [versions]
-agp = "8.3.0-alpha11"
-kotlin = "1.9.10"
-core-ktx = "1.10.1"
 compileSdk = "34"
 targetSdk = "34"
 minSdk = "24"
-junit = "4.13.2"
-androidx-test-ext-junit = "1.1.5"
-espresso-core = "3.5.1"
-lifecycle-runtime-compose = "2.6.2"
-activity-compose = "1.7.0"
-compose-bom = "2023.08.00"
-compose-runtime = "1.5.1"
-compose-navigation = "2.7.4"
-appcompat = "1.6.1"
-material = "1.10.0"
-moshi = "1.14.0"
-datastore = "1.0.0"
-androidxHiltNavigationCompose = "1.0.0"
-hilt = "2.48.1"
-ksp = "1.9.10-1.0.13"
-mavericks = "3.0.7"
-threetenabp = "1.3.1"
-javax = "1"
-coroutine-core = "1.7.3"
-androidxComposeCompiler = "1.5.3"
+
+agp = "8.3.0-alpha11"
+kotlin = "1.9.10"
+coreKtx = "1.10.1"
 coroutine = "1.7.2"
-room = "2.6.0"
-monitor = "1.6.1"
-junitKtx = "1.1.5"
+
+appcompat = "1.6.1"
+compose = "1.7.0"
+composeBom = "2023.08.00"
+composeRuntime = "1.5.1"
+composeNavigation = "2.7.4"
+androidxHiltNavigationCompose = "1.0.0"
+androidxComposeCompiler = "1.5.3"
+material = "1.10.0"
+material3 = "1.1.2"
+
+lifecycleRuntimeCompose = "2.6.2"
+lifecycleViewmodelCompose = "2.6.2"
+
 window = "1.0.0"
 balloon = "1.6.2"
-material3 = "1.1.2"
+monitor = "1.6.1"
 colorPicker = "1.0.5"
 splashScreen = "1.1.0-alpha02"
-lifecycle-viewmodel-compose = "2.6.2"
+
+hilt = "2.48.1"
+ksp = "1.9.10-1.0.13"
+moshi = "1.14.0"
+datastore = "1.0.0"
+mavericks = "3.0.7"
+threetenabp = "1.3.1"
+room = "2.6.0"
+
+javax = "1"
+junit = "4.13.2"
+androidxTestExtJunit = "1.1.5"
+espresso-core = "3.5.1"
+junitKtx = "1.1.5"
 
 [libraries]
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
@@ -43,20 +48,21 @@ kotlin-gradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", ve
 androidx-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "splashScreen" }
 androidx-window = { group = "androidx.window", name = "window", version.ref = "window" }
 
-androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
-androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
+androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "compose" }
+androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 
-androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle-viewmodel-compose" }
-androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle-runtime-compose" }
+androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
+androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycleRuntimeCompose" }
 
-androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime", version.ref = "compose-runtime" }
+androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime", version.ref = "composeRuntime" }
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
+androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
-androidx-compose-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "compose-navigation" }
+androidx-compose-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "composeNavigation" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 androidx-datastore = { group = "androidx.datastore", name = "datastore", version.ref = "datastore" }
 androidx-datastore-preference = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
@@ -89,15 +95,12 @@ balloon = { group = "com.github.skydoves", name = "balloon-compose", version.ref
 color_picker = { group = "com.github.skydoves", name = "colorpicker-compose", version.ref = "colorPicker" }
 
 javax = { group = "javax.inject", name = "javax.inject", version.ref = "javax" }
-coroutine-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutine-core" }
-
 junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
+androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidxTestExtJunit" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-monitor = { group = "androidx.test", name = "monitor", version.ref = "monitor" }
 androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
 
