--- a/data/alarm/impl/src/main/AndroidManifest.xml
+++ b/data/alarm/impl/src/main/AndroidManifest.xml
@@ -2,4 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+
+    <application>
+
+        <receiver android:name=".AlarmReceiver" />
+
+    </application>
+
 </manifest>
