#30 chore : data:alarm:impl 모듈 -> base com.titi.app

--- a/data/alarm/impl/src/main/AndroidManifest.xml
+++ b/data/alarm/impl/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <application>
 
-        <receiver android:name=".AlarmReceiver" />
+        <receiver android:name="com.titi.app.data.alarm.impl.AlarmReceiver" />
 
     </application>
 
