--- a/feature/color/src/main/AndroidManifest.xml
+++ b/feature/color/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <application>
 
         <activity
-            android:name="com.titi.feature.color.ui.ColorActivity"
+            android:name=".ui.ColorActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
