--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,14 +28,14 @@ jobs:
         run: |
           echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > ./app/google-services.json
 
-      - name: Build with Gradle
-        run: ./gradlew build
+      - name: BuildDev with Gradle
+        run: ./gradlew buildDev
 
       - name: Build Debug APK
         id: buildDebug
         run: ./gradlew assembleDev
 
-      - name: upload artifact to Firebase App Distribution
+      - name: Upload APK to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
           appId: ${{secrets.FIREBASE_APP_ID_DEV}}
