chore : targetsdk, github action, 릴리즈노트

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -42,4 +42,4 @@ jobs:
           serviceCredentialsFileContent: ${{secrets.CREDENTIAL_FILE_CONTENT}}
           groups: develop
           file: app/build/outputs/apk/dev/app-dev.apk
-      
+          releaseNotesFile: ./release-note.txt
