--- a/feature/color/src/main/AndroidManifest.xml
+++ b/feature/color/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <application>
         <activity
             android:name=".ui.ColorActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
     </application>
 </manifest>
