--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,7 @@
-[*.{kt,kts}]
+[{*.kt,*.kts}]
 ktlint_code_style = android_studio
 ij_kotlin_allow_trailing_comma=true
 ij_kotlin_allow_trailing_comma_on_call_site=true
 ktlint_function_naming_ignore_when_annotated_with=Composable, Test
 ktlint_standard_annotation = disabled
-ktlint_import_ordering = disabled
+disabled_rules = import-ordering
