--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -42,9 +42,9 @@ espresso-core = "3.5.1"
 junitKtx = "1.1.5"
 material3WindowSize = "1.1.2"
 
-firebaseServicesPlugin = "4.4.0"
+googlePlayServices = "4.4.1"
 firebaseCrashlyticsPlugin = "2.9.9"
-firebaseBom = "32.7.1"
+firebaseBom = "32.7.3"
 
 ktlint = "12.1.0"
 
@@ -128,7 +128,7 @@ hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 
-firbaseServices = { id = "com.google.gms.google-services", version.ref = "firebaseServicesPlugin" }
+googleServices = { id = "com.google.gms.google-services", version.ref = "googlePlayServices" }
 firebaseCrashlytics = { id = "com.google.firebase.crashlytics", version.ref = "firebaseCrashlyticsPlugin" }
 
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
