#82 feat : firebase 이용한 현재 최신 버전 가져오기

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -117,6 +117,7 @@ androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.
 firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebaseBom" }
 firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics" }
 firebase-crashlytics = { group = "com.google.firebase", name = "firebase-crashlytics" }
+firebase-database = { group = "com.google.firebase", name = "firebase-database-ktx" }
 
 calendar = { group = "com.kizitonwose.calendar", name = "compose", version.ref = "calendar" }
 
