--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ compileSdk = "34"
 targetSdk = "34"
 minSdk = "26"
 
-agp = "8.3.0-alpha11"
+agp = "8.3.2"
 kotlin = "1.9.21"
 coreKtx = "1.12.0"
 coroutine = "1.7.3"
