#147 feat : 토스트 아이콘 lottie

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -50,6 +50,7 @@ ktlint = "12.1.0"
 
 calendar = "2.5.0-beta01"
 picker = "1.0.3"
+lottie = "6.4.1"
 
 [libraries]
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
@@ -122,6 +123,7 @@ firebase-database = { group = "com.google.firebase", name = "firebase-database-k
 
 calendar = { group = "com.kizitonwose.calendar", name = "compose", version.ref = "calendar" }
 picker = { group = "com.chargemap.compose", name = "numberpicker", version.ref = "picker" }
+lottie = { group = "com.airbnb.android", name = "lottie-compose", version.ref = "lottie" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
