--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,46 +5,46 @@ minSdk = "26"
 
 agp = "8.3.2"
 kotlin = "1.9.21"
-coreKtx = "1.12.0"
+coreKtx = "1.13.1"
 coroutine = "1.7.3"
 
-appcompat = "1.6.1"
-compose = "1.8.2"
-composeBom = "2024.01.00"
-composeRuntime = "1.6.0"
-composeNavigation = "2.7.6"
-androidxHiltNavigationCompose = "1.1.0"
+appcompat = "1.7.0"
+compose = "1.9.0"
+composeBom = "2024.06.00"
+composeRuntime = "1.6.8"
+composeNavigation = "2.7.7"
+androidxHiltNavigationCompose = "1.2.0"
 androidxComposeCompiler = "1.5.7"
-material = "1.11.0"
-material3 = "1.1.2"
+material = "1.12.0"
+material3 = "1.2.1"
 
-lifecycleRuntimeCompose = "2.7.0"
-lifecycleViewmodelCompose = "2.7.0"
+lifecycleRuntimeCompose = "2.8.2"
+lifecycleViewmodelCompose = "2.8.2"
 
-window = "1.2.0"
-balloon = "1.6.3"
-monitor = "1.6.1"
+window = "1.3.0"
+balloon = "1.6.4"
+monitor = "1.7.1"
 colorPicker = "1.0.5"
-splashScreen = "1.1.0-alpha02"
+splashScreen = "1.1.0-rc01"
 
-hilt = "2.48.1"
+hilt = "2.49"
 ksp = "1.9.10-1.0.13"
-moshi = "1.15.0"
-datastore = "1.0.0"
+moshi = "1.15.1"
+datastore = "1.1.1"
 mavericks = "3.0.7"
 threetenabp = "1.3.1"
 room = "2.6.1"
 
 javax = "1"
 junit = "4.13.2"
-androidxTestExtJunit = "1.1.5"
-espresso-core = "3.5.1"
-junitKtx = "1.1.5"
-material3WindowSize = "1.1.2"
+androidxTestExtJunit = "1.2.1"
+espresso-core = "3.6.1"
+junitKtx = "1.2.1"
+material3WindowSize = "1.2.1"
 
-googlePlayServices = "4.4.1"
-firebaseCrashlyticsPlugin = "2.9.9"
-firebaseBom = "32.7.3"
+googlePlayServices = "4.4.2"
+firebaseCrashlyticsPlugin = "3.0.2"
+firebaseBom = "33.1.1"
 
 ktlint = "12.1.0"
 
