--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,24 +6,24 @@ minSdk = "26"
 agp = "8.3.2"
 kotlin = "1.9.21"
 coreKtx = "1.13.1"
-coroutine = "1.7.3"
+coroutine = "1.9.0-RC"
 
 appcompat = "1.7.0"
-compose = "1.9.0"
-composeBom = "2024.06.00"
-composeRuntime = "1.6.8"
-composeNavigation = "2.7.7"
+compose = "1.9.2"
+composeBom = "2024.09.02"
+composeRuntime = "1.7.2"
+composeNavigation = "2.8.1"
 androidxHiltNavigationCompose = "1.2.0"
 androidxComposeCompiler = "1.5.7"
 material = "1.12.0"
-material3 = "1.2.1"
+material3 = "1.3.0"
 
-lifecycleRuntimeCompose = "2.7.0"
-lifecycleViewmodelCompose = "2.7.0"
+lifecycleRuntimeCompose = "2.8.6"
+lifecycleViewmodelCompose = "2.8.6"
 
 window = "1.3.0"
 balloon = "1.6.4"
-monitor = "1.7.1"
+monitor = "1.7.2"
 colorPicker = "1.0.5"
 splashScreen = "1.1.0-rc01"
 
@@ -40,11 +40,11 @@ junit = "4.13.2"
 androidxTestExtJunit = "1.2.1"
 espresso-core = "3.6.1"
 junitKtx = "1.2.1"
-material3WindowSize = "1.2.1"
+material3WindowSize = "1.3.0"
 
 googlePlayServices = "4.4.2"
 firebaseCrashlyticsPlugin = "3.0.2"
-firebaseBom = "33.1.1"
+firebaseBom = "33.3.0"
 
 ktlint = "12.1.0"
 
