--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ render.experimental.xml
 # Keystore files
 *.jks
 *.keystore
+keystore.properties
+upload_certificate.pem
 
 # Google Services (e.g. APIs or Firebase)
 google-services.json
