--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ compileSdk = "34"
 targetSdk = "34"
 minSdk = "26"
 
+kotlinxSerializationJson = "1.6.3"
 agp = "8.3.2"
 kotlin = "1.9.21"
 coreKtx = "1.13.1"
@@ -12,7 +13,7 @@ appcompat = "1.7.0"
 compose = "1.9.2"
 composeBom = "2024.09.02"
 composeRuntime = "1.7.2"
-composeNavigation = "2.8.1"
+composeNavigation = "2.8.5"
 androidxHiltNavigationCompose = "1.2.0"
 androidxComposeCompiler = "1.5.7"
 material = "1.12.0"
@@ -54,6 +55,7 @@ lottie = "6.4.1"
 [libraries]
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
 kotlin-gradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 
 androidx-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "splashScreen" }
 androidx-window = { group = "androidx.window", name = "window", version.ref = "window" }
@@ -130,6 +132,7 @@ androidLibrary = { id = "com.android.library", version.ref = "agp" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 
 googleServices = { id = "com.google.gms.google-services", version.ref = "googlePlayServices" }
 firebaseCrashlytics = { id = "com.google.firebase.crashlytics", version.ref = "firebaseCrashlyticsPlugin" }
